--- a/src/api_encrypted/index.html
+++ b/src/api_encrypted/index.html
@@ -11,6 +11,11 @@
 	</head>
 	<body>
 		<h3>API Encrypted: AES</h3>
-		<div id="output"></div>
+		<table>
+			<tr>
+				<td><div id="output"></div></td>
+				<td><div id="output2"></div></td>
+			</tr>
+		</table>
 	</body>
 </html>
