--- a/src/cache_entry_browser/index.html
+++ b/src/cache_entry_browser/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 	<head>
 		<meta charset="utf-8">
-		<title>Todo</title>
+		<title>Log</title>
 		<script type="application/javascript" src="/webactions.bundle.js"></script>
 		<script type="application/javascript" src="/parsing.js"></script>
 		<script type="application/javascript" src="./js/index.js"></script>
