--- a/src/graphing/bak/dagre/examples/graphviz/index.html
+++ b/src/graphing/bak/dagre/examples/graphviz/index.html
@@ -2,12 +2,7 @@
 <html>
 	<meta charset="utf-8">
 		<title>Dagre D3 Renderer Demo</title>
-		<script src="../../js/d3/d3.v5.min.js" charset="utf-8"></script>
-		<script src="../../js/dagre/dagre-d3.js"></script>
-		<script src="../../js/graphlib-dot/graphlib-dot.min.js"></script>
-		<link rel="stylesheet" href="../../fonts/exepixelperfect/style.css"></link>
-		<link rel="stylesheet" href="../../fonts/proggy/style.css"></link>
-		<link rel="stylesheet" href="./css/style.css"></link>
+		<link rel="stylesheet" href="/kweexamples/src/graphing/bak/dagre/fonts/exepixelperfect/style.css|/kweexamples/src/graphing/bak/dagre/examples/graphviz/css/style.css"></link>
 	<body onLoad="tryDraw();">
 		<form>
 		  <textarea id="inputGraph" rows="5" style="display: block" onKeyUp="tryDraw();">
@@ -45,7 +40,7 @@ print(`digraph{`+src+`}`);
 		<a id="graphLink">Link for this graph</a>
 		</form>
 		<svg width="100%" height="100%"><g/></svg>
-		<script src="./js/index.js"></script>
+		<script src=""></script>
 <!--
 digraph{
 //----------------------------------------------------------------------------------------
@@ -108,5 +103,6 @@ A->D [labelType="html" label="A multi-rank <span style='color:blue;'>HTML</span>
 }
 
 -->
+		<script src="/kweexamples/src/graphing/bak/dagre/js/d3/d3.v5.min.js|/kweexamples/src/graphing/bak/dagre/js/dagre/dagre-d3.min.js|/kweexamples/src/graphing/bak/dagre/js/graphlib-dot/graphlib-dot.min.js|/kweexamples/src/graphing/bak/dagre/examples/graphviz/js/index.js" charset="utf-8"></script>
 	</body>
 </html>
