--- a/src/graphing/bak/dagre/examples/graphviz/index.html
+++ b/src/graphing/bak/dagre/examples/graphviz/index.html
@@ -7,6 +7,7 @@
 		<form>
 		  <textarea id="inputGraph" rows="5" style="display: block" onKeyUp="tryDraw();">
 <@
+//var toks="0x00;0x01;0x02;0x02;0x03;0x04;0x05;0x06;0x07";//.split("");//["for","var","let","while","break"];
 var toks="0x00;0x01;0x02;0x02;0x03;0x04;0x05;0x06;0x07";//.split("");//["for","var","let","while","break"];
 toks=toks.split(";");
 var glyphs=[];
