--- a/src/graphing/bak/dagre/index.html
+++ b/src/graphing/bak/dagre/index.html
@@ -5,6 +5,7 @@
 		<title>Dagre Samples</title>
 	</head>
 	<body>
+		<a href="./test.html">test</a></br>
 		<a href="./etl.html">etl</a></br>
 		<a href="./arrows.html">arrows</a></br>
 		<a href="./user_defined_shapes.html">user defined shapes</a></br>
