--- a/src/graphing/index.html
+++ b/src/graphing/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<link rel="stylesheet" href="./css/style.css"></link>
-<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-<script src="https://d3js.org/d3.v3.min.js"></script>
-<script src="./js/index.js"></script>
-<body>
-	<div id="tree-container"></div>
-</body>
+<html lang="en-US">
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" href="./css/style.css"></link>
+		<!--
+		<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
+		<script src="https://d3js.org/d3.v3.min.js"></script>
+		<script src="./js/index.js"></script>
+		-->
+		<script data-main="./js/index.js" src="/require.js"></script>
+		<script src="./js/require.conf.js"></script>
+	</head>
+	<body>
+		<div id="tree-container"></div>
+	</body>
 </html>
