--- a/src/graphing/bak/dagre/examples/graphviz/index.html
+++ b/src/graphing/bak/dagre/examples/graphviz/index.html
@@ -2,7 +2,11 @@
 <html>
 	<meta charset="utf-8">
 		<title>Dagre D3 Renderer Demo</title>
+		<!--
 		<link rel="stylesheet" href="/kweexamples/src/graphing/bak/dagre/fonts/exepixelperfect/style.css|/kweexamples/src/graphing/bak/dagre/examples/graphviz/css/style.css"></link>
+		-->
+		<link rel="stylesheet" href="/kweexamples/src/graphing/bak/dagre/fonts/exepixelperfect/style.css"></link>
+		<link rel="stylesheet" href="/kweexamples/src/graphing/bak/dagre/examples/graphviz/css/style.css"></link>
 	<body onLoad="tryDraw();">
 		<form>
 		  <textarea id="inputGraph" rows="5" style="display: block" onKeyUp="tryDraw();">
@@ -104,6 +108,12 @@ A->D [labelType="html" label="A multi-rank <span style='color:blue;'>HTML</span>
 }
 
 -->
+		<!--
 		<script src="/kweexamples/src/graphing/bak/dagre/js/d3/d3.v5.min.js|/kweexamples/src/graphing/bak/dagre/js/dagre/dagre-d3.min.js|/kweexamples/src/graphing/bak/dagre/js/graphlib-dot/graphlib-dot.min.js|/kweexamples/src/graphing/bak/dagre/examples/graphviz/js/index.js" charset="utf-8"></script>
+		-->
+		<script src="/kweexamples/src/graphing/bak/dagre/js/d3/d3.v5.min.js"></script>
+		<script src="/kweexamples/src/graphing/bak/dagre/js/dagre/dagre-d3.min.js"></script>
+		<script src="/kweexamples/src/graphing/bak/dagre/js/graphlib-dot/graphlib-dot.min.js"></script>
+		<script src="/kweexamples/src/graphing/bak/dagre/examples/graphviz/js/index.js" charset="utf-8"></script>
 	</body>
 </html>
