--- a/src/jison/index.html
+++ b/src/jison/index.html
@@ -253,11 +253,11 @@ textarea:focus, input:focus, button:focus, select:focus{
 					}
 					{
 						var vim = new VIM()
-						var target = document.getElementById('prg')
+						//var target = document.getElementById('prg')
 						if (target !== null) {
 							/* attach vim. this is the only line really needed */
 							vim.attach_to( target )
-							target.focus()
+							//target.focus()
 						}
 					}
 				});
