--- a/src/jison/index.html
+++ b/src/jison/index.html
@@ -169,7 +169,9 @@ textarea:focus, input:focus, button:focus, select:focus{
 						}),
 						success:function(r){
 							progress3.remove();
-							if(r.error){
+							if(r.error!=null){
+								$("#out").empty();
+								$("#out").append($("<div/>").addClass("error").text(r.error));
 							}else{
 								var lines=[];
 								r.out.forEach(function(line){
