--- a/src/graphing/js/kwe/editor2/index.html
+++ b/src/graphing/js/kwe/editor2/index.html
@@ -1,15 +1,16 @@
 <div class="menu">
-		<button id="run_srv" class="alt-u"style="">Run Srv <sup>[alt-u]</sup></button>
-		<button id="run_cli" class="alt-i"style="">Run Cli <sup>[alt-i]</sup></button>
+		<button id="run_srv" class="alt-u"style="">Run Srv<sup>[alt-u]</sup></button>
+		<button id="run_cli" class="alt-i"style="">Run Cli<sup>[alt-i]</sup></button>
+		<button id="reset" class="alt-q" tooltip="Alt-Q" style="">Reload Srv<sup>[alt-q]</sup></button>
+		<button id="save" class="alt-w" tooltip="Alt-W" style="">Commit Loc<sup>[alt-w]</sup></button>
+		<button id="commit" class="alt-c" tooltip="Alt-C" style="">Commit Srv<sup>[alt-c]</sup></button>
 		<button id="vkeys" class="alt-k" tooltip="Alt-R" style="">Vi-keys <sup>[alt-k]</sup></button>
-		<button id="reset" class="alt-q" tooltip="Alt-Q" style="">Reset<sup>[alt-q]</sup></button>
-		<button id="save" class="alt-w" tooltip="Alt-W" style="">Save<sup>[alt-w]</sup></button>
-		<select id="sample">
+		<!--<select id="sample">
 			<option value="test0">test0</option>
 			<option value="test1">test1</option>
 			<option value="test2">test2</option>
 			<option value="test3">test3</option>
 			<option value="test4">test4</option>
-		</select>
+		</select>-->
 		<span style="">SRV/CLI Executor</span>
 </div>
